--- a/Student Project Repository/package.json
+++ b/Student Project Repository/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.16.2",
+    "helmet": "^3.20.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.6.1",
     "moongoose": "0.0.5",
